--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
 <head>
-  <script src="http://localhost:5000/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io();
-    io.on('connection', function (socket) {
-      socket.emit('heavy_task', '');
-      socket.on('task_initiated', function(msg) {console.log(msg)});
-      socket.on('task_complete', function(msg) {console.log(msg)});
-    });
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+  <script type="text/javascript" charset="utf-8">
+      var socket = io.connect('http://localhost:5000');
+      socket.on('connection', function () {
+        socket.emit('heavy_task', '');
+        socket.on('task_initiated', function(msg) {console.log(msg)});
+        socket.on('task_complete', function(msg) {console.log(msg)});
+      });
   </script>
 </head>
 <body>
